2009-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c (IntegralRotateImage): Rotate by zero degrees
	does not need to do any work.

	* coders/*.c, magick/*.c: Include image dimensions in progress
	monitor output when loading or saving a file.  Eliminate redundant
	text from progress messages.

2009-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wmf.c: Eliminate memory leaks.

	* magick/render.c (DrawDashPolygon): Avoid access beyond end of
	array.  Resolves SourceForge issue 2832125 "Crash on SVG
	conversion".

	* coders/png.c (ReadOnePNGImage): Ensure that opacity channel is
	properly initialized.  Resolves SourceForge issue 2831240
	"Possible alpha channel issue with PNG w/palette and tRNS".

2009-08-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.h (HAVE_TIFFSWABARRAYOFTRIPLES): Need to define
	this since libtiff includes this function now.

	* VisualMagick/tiff/libtiff/tiffconf.h.in: Enable all the options
	by default.

	* tiff: Updated to libtiff 3.9.1.  3.9.0 was broken.

2009-08-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (MagickFreeCMSTransform): Add a CMS transform
	destructor since otherwise Visual Studio does not like it.

	* tiff: Updated to libtiff 3.9.0.

2009-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (TimeImageCommand): Add a simple 'time'
	sub-command to time the execution of any other GraphicsMagick
	sub-command.  Similar in concept to the 'benchmark' sub-command
	but produces output similar to the 'time' command offered by the
	zsh command shell.  Handy for when 'time' is not available, or
	consistent output is desired.

	* magick/magick.c (MagickGetFileSystemBlockSize): New private
	function to allow getting desired filesystem block size.
	(MagickSetFileSystemBlockSize): New private function to allow
	setting desired filesystem block size.

	* magick/pixel_cache.c (WriteCacheIndexes, WriteCachePixels):